2018-07-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (WriteOnePNGImage): Free png_pixels as soon as
	possible.  This might help with oss-fuzz 9334
	"graphicsmagick/coder_PNG8_fuzzer: Direct-leak in
	WriteOnePNGImage", which we have yet to reproduce.  It is not
	clear if png_pixels is being clobbered by longjmp or if something
	else is going on.

2018-06-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jpeg.c (ReadJPEGImage): Provide a memory resource limit
	(of 1/5th the memory resource limit for Graphicsmagick) to libjpeg
	to limit how much memory it might consume for itself while reading
	a file.  Fixes oss-fuzz 9096 "graphicsmagick/coder_JPEG_fuzzer:
	Timeout in graphicsmagick_coder_JPEG_fuzzer".  (Credit to
	OSS-Fuzz)
	(ReadJPEGImage): Make sure that JPEG pixels array is initialized
	in case libjpeg fails to completely initialize it.  May fix
	oss-fuzz 9115 "graphicsmagick/coder_JPEG_fuzzer:
	Use-of-uninitialized-value in ReadJPEGImage".  We are not sure
	since the problem was not reproduced.  (Credit to OSS-Fuzz)

2018-06-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: Update library versioning for 1.3.30 release.

	* NEWS.txt: Update news for 1.3.30 release.

2018-06-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c (ReadDPXImage): Report exception on EOF file
	reading DPX pixel data. Fixes oss-fuzz 8104
	"graphicsmagick/coder_DPX_fuzzer: Use-of-uninitialized-value in
	WriteDPXImage", oss-fuzz 8297 "graphicsmagick/enhance_fuzzer:
	Use-of-uninitialized-value in EnhanceImage", and oss-fuzz 8133
	"graphicsmagick/coder_DPX_fuzzer: Use-of-uninitialized-value in
	RGBTransformPackets". (Credit to OSS-Fuzz)

2018-06-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/cmyk.c (ReadCMYKImage): Free scanline buffer in error
	path. Fixes SourceForge issue #567 "small memory leak in rgb.c,
	gray.c and cmyk.c" reported by Petr Gajdos.
