@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020180710"
-#define public MagickPackageReleaseDate "snapshot-20180710"
+#define public MagickPackageVersionAddendum ".020180711"
+#define public MagickPackageReleaseDate "snapshot-20180711"
